Fixes #6690, #6933 - google-secret-manager extend coverage and native support

--- a/docs/modules/ROOT/pages/reference/extensions/google-secret-manager.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/google-secret-manager.adoc
@@ -4,17 +4,17 @@
 = Google Secret Manager
 :linkattrs:
 :cq-artifact-id: camel-quarkus-google-secret-manager
-:cq-native-supported: false
-:cq-status: Preview
-:cq-status-deprecation: Preview
+:cq-native-supported: true
+:cq-status: Stable
+:cq-status-deprecation: Stable
 :cq-description: Manage Google Secret Manager Secrets
 :cq-deprecated: false
 :cq-jvm-since: 2.8.0
-:cq-native-since: n/a
+:cq-native-since: 3.19.0
 
 ifeval::[{doc-show-badges} == true]
 [.badges]
-[.badge-key]##JVM since##[.badge-supported]##2.8.0## [.badge-key]##Native##[.badge-unsupported]##unsupported##
+[.badge-key]##JVM since##[.badge-supported]##2.8.0## [.badge-key]##Native since##[.badge-supported]##3.19.0##
 endif::[]
 
 Manage Google Secret Manager Secrets
@@ -28,6 +28,10 @@ Please refer to the above link for usage and configuration details.
 
 [id="extensions-google-secret-manager-maven-coordinates"]
 == Maven coordinates
+
+https://{link-quarkus-code-generator}/?extension-search=camel-quarkus-google-secret-manager[Create a new project with this extension on {link-quarkus-code-generator}, window="_blank"]
+
+Or add the coordinates to your existing project:
 
 [source,xml]
 ----
