Add note to OpenTelemetry extension docs stating that the otel agent is not required

--- a/extensions/opentelemetry/runtime/src/main/doc/usage.adoc
+++ b/extensions/opentelemetry/runtime/src/main/doc/usage.adoc
@@ -21,6 +21,10 @@ Route endpoints can be excluded from tracing by configuring a property named `qu
 quarkus.camel.opentelemetry.exclude-patterns=direct:*,netty-http:*
 ----
 
+NOTE: The use of the https://opentelemetry.io/docs/zero-code/java/agent/[OpenTelemetry Agent] *is not needed nor recommended*.
+Quarkus Extensions and the libraries they provide, are directly instrumented.
+Also, the agent does not work in native mode.
+
 === Exporters
 
 Quarkus OpenTelemetry defaults to the standard OTLP exporter defined in OpenTelemetry.
