--- a/docs/modules/ROOT/pages/reference/extensions/dsl-modeline.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/dsl-modeline.adoc
@@ -6,15 +6,15 @@
 :cq-artifact-id: camel-quarkus-dsl-modeline
 :cq-native-supported: false
 :cq-status: Preview
-:cq-status-deprecation: Preview
+:cq-status-deprecation: Preview Deprecated
 :cq-description: Support for Camel K style modeline
-:cq-deprecated: false
+:cq-deprecated: true
 :cq-jvm-since: 2.14.0
 :cq-native-since: n/a
 
 ifeval::[{doc-show-badges} == true]
 [.badges]
-[.badge-key]##JVM since##[.badge-supported]##2.14.0## [.badge-key]##Native##[.badge-unsupported]##unsupported##
+[.badge-key]##JVM since##[.badge-supported]##2.14.0## [.badge-key]##Native##[.badge-unsupported]##unsupported## [.badge-key]##⚠️##[.badge-unsupported]##Deprecated##
 endif::[]
 
 Support for Camel K style modeline
