Add Jolokia JVM only extension
Fixes #6942

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -183,6 +183,7 @@
 *** xref:reference/extensions/javascript.adoc[JavaScript]
 *** xref:reference/extensions/jfr.adoc[Jfr]
 *** xref:reference/extensions/jira.adoc[Jira]
+*** xref:reference/extensions/jolokia.adoc[Jolokia]
 *** xref:reference/extensions/json-patch.adoc[JsonPatch]
 *** xref:reference/extensions/kafka.adoc[Kafka]
 *** xref:reference/extensions/kamelet.adoc[Kamelet]
