--- a/docs/modules/ROOT/pages/reference/extensions/groovy-dsl.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/groovy-dsl.adoc
@@ -22,9 +22,7 @@ Support for parsing Groovy route definitions at runtime
 [id="extensions-groovy-dsl-whats-inside"]
 == What's inside
 
-* xref:{cq-camel-components}:others:groovy-dsl.adoc[Groovy DSL]
-
-Please refer to the above link for usage and configuration details.
+* Groovy DSL
 
 [id="extensions-groovy-dsl-maven-coordinates"]
 == Maven coordinates
