--- a/docs/modules/ROOT/pages/reference/extensions/jsh-dsl.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/jsh-dsl.adoc
@@ -22,9 +22,7 @@ Camel DSL with JavaShell
 [id="extensions-jsh-dsl-whats-inside"]
 == What's inside
 
-* xref:{cq-camel-components}:others:jsh-dsl.adoc[JavaShell DSL]
-
-Please refer to the above link for usage and configuration details.
+* JavaShell DSL
 
 [id="extensions-jsh-dsl-maven-coordinates"]
 == Maven coordinates
