--- a/docs/modules/ROOT/pages/reference/extensions/js-dsl.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/js-dsl.adoc
@@ -22,7 +22,7 @@ An JavaScript stack for parsing JavaScript route definitions
 [id="extensions-js-dsl-whats-inside"]
 == What's inside
 
-* xref:{cq-camel-components}:others:js-dsl.adoc[JavaScript DSL]
+* JavaScript DSL
 
 Please refer to the above link for usage and configuration details.
 
