Fix website build properly for 960e771

--- a/tooling/maven-plugin/src/main/resources/doc-templates/extension-doc-page.adoc
+++ b/tooling/maven-plugin/src/main/resources/doc-templates/extension-doc-page.adoc
@@ -24,7 +24,7 @@ endif::[]
 == What's inside
 
 [#list models as model]
-* [=camelBitLink(model, models)][[=model.title][#if model.kind != "other" ] [=humanReadableKind(model.kind)][/#if]][#if model.kind == "component" ], URI syntax: `[=model.syntax]`[/#if]
+* [#if camelBitLink(model, models)?contains("xref")][=camelBitLink(model, models)][[=model.title][#if model.kind != "other" ] [=humanReadableKind(model.kind)][/#if]][#if model.kind == "component" ], URI syntax: `[=model.syntax]`[/#if][#else][=camelBitLink(model, models)][/#if]
 [/#list]
 
 Please refer to the above link[#if models?size != 1]s[/#if] for usage and configuration details.
