Add Jolokia native support
Fixes #7001

--- a/docs/modules/ROOT/pages/reference/extensions/jolokia.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/jolokia.adoc
@@ -4,23 +4,27 @@
 = Jolokia
 :linkattrs:
 :cq-artifact-id: camel-quarkus-jolokia
-:cq-native-supported: false
-:cq-status: Preview
-:cq-status-deprecation: Preview
+:cq-native-supported: true
+:cq-status: Stable
+:cq-status-deprecation: Stable
 :cq-description: Expose runtime metrics and management operations via JMX with Jolokia
 :cq-deprecated: false
 :cq-jvm-since: 3.19.0
-:cq-native-since: n/a
+:cq-native-since: 3.19.0
 
 ifeval::[{doc-show-badges} == true]
 [.badges]
-[.badge-key]##JVM since##[.badge-supported]##3.19.0## [.badge-key]##Native##[.badge-unsupported]##unsupported##
+[.badge-key]##JVM since##[.badge-supported]##3.19.0## [.badge-key]##Native since##[.badge-supported]##3.19.0##
 endif::[]
 
 Expose runtime metrics and management operations via JMX with Jolokia
 
 [id="extensions-jolokia-maven-coordinates"]
 == Maven coordinates
+
+https://{link-quarkus-code-generator}/?extension-search=camel-quarkus-jolokia[Create a new project with this extension on {link-quarkus-code-generator}, window="_blank"]
+
+Or add the coordinates to your existing project:
 
 [source,xml]
 ----
@@ -159,6 +163,17 @@ Note that if you choose to use https://github.com/hawtio/hawtio-online[hawtio-on
 ----
 quarkus.camel.jolokia.kubernetes.client-principal="cn=hawtio-online.hawtio.svc"
 ----
+
+
+[id="extensions-jolokia-camel-quarkus-limitations"]
+== Camel Quarkus limitations
+
+[id="extensions-jolokia-limitations-native-mode-limitations"]
+=== Native mode limitations
+
+JMX in GraalVM is still *experimental*. Therefore, some features are not available in native mode.
+
+Refer to the Camel Quarkus Management extension xref:reference/extensions/management.adoc#extensions-management-limitations-native-mode[limitations] section for more details.
 
 
 [id="extensions-jolokia-additional-camel-quarkus-configuration"]
