--- a/docs/modules/ROOT/pages/reference/extensions/management.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/management.adoc
@@ -62,3 +62,15 @@ quarkus.native.monitoring=jvmstat
 
 For more information, refer to the https://quarkus.io/guides/building-native-image#using-monitoring-options[Quarkus native guide].
 
+
+[id="extensions-management-camel-quarkus-limitations"]
+== Camel Quarkus limitations
+
+[id="extensions-management-limitations-native-mode"]
+=== Native mode
+
+JMX in GraalVM is still *experimental*. Therefore, some features are not available in native mode.
+
+* Operations for MBean `java.lang:type=Threading` are not fully implemented. Therefore, it is not possible to obtain details about application threads.
+* Various MBean attributes do not have their values implemented. For example, the `ClassCount` attribute values for MBean `java.lang:type=ClassLoading` are fixed at `0`
+
