--- a/docs/modules/ROOT/pages/reference/extensions/kafka.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/kafka.adoc
@@ -67,7 +67,7 @@ This functionality can be disabled with the configuration property `quarkus.kafk
 | Configuration property | Type | Default
 
 
-| [[quarkus.camel.kafka.kubernetes-service-binding.merge-configuration]]`link:#quarkus.camel.kafka.kubernetes-service-binding.merge-configuration[quarkus.camel.kafka.kubernetes-service-binding.merge-configuration]`
+a| [[quarkus.camel.kafka.kubernetes-service-binding.merge-configuration]]`link:#quarkus.camel.kafka.kubernetes-service-binding.merge-configuration[quarkus.camel.kafka.kubernetes-service-binding.merge-configuration]`
 
 If `true` then any Kafka configuration properties discovered by the Quarkus Kubernetes Service Binding extension (if
 configured) will be merged with those set via Camel Kafka component or endpoint options. If `false` then any Kafka
