--- a/docs/modules/ROOT/pages/reference/extensions/microprofile-health.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/microprofile-health.adoc
@@ -82,7 +82,7 @@ Inspects the status of each route and causes the health check status to be `DOWN
 | Configuration property | Type | Default
 
 
-|icon:lock[title=Fixed at build time] [[quarkus.camel.health.enabled]]`link:#quarkus.camel.health.enabled[quarkus.camel.health.enabled]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.health.enabled]]`link:#quarkus.camel.health.enabled[quarkus.camel.health.enabled]`
 
 Set whether to enable Camel health checks
 | `boolean`
